--- a/src/components/NewsCard/NewsCard.module.css
+++ b/src/components/NewsCard/NewsCard.module.css
@@ -10,7 +10,7 @@
   height: 200px;
 }
 
-img {
+.imgContainer > img {
   border-top-left-radius: 12px;
   border-top-right-radius: 12px;
   width: 100%;
