--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -9,6 +9,14 @@
   width: 100px;
 }
 
+.imgContainer > img {
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .title {
   font-size: 24px;
   font-weight: bold;
