--- a/src/components/Searchbar/Searchbar.module.css
+++ b/src/components/Searchbar/Searchbar.module.css
@@ -1,4 +1,28 @@
 .searchbar {
-  height: 20px;
-  max-width: 300px;
+  display: flex;
+  max-width: 400px;
+  flex-grow: 1;
+}
+
+.label {
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+.searchInput {
+  border: 1px solid #dcdcdc;
+  border-top-left-radius: 6px;
+
+  border-bottom-left-radius: 6px;
+  background-color: #ffffff;
+  box-shadow: 10px 10px 5px -10px rgba(0, 0, 0, 0.5) inset;
+  flex-grow: 1;
+}
+
+.searchButton {
+  padding: 5px;
+  border: 1px solid #dcdcdc;
+  background-color: #ffffff;
+  box-shadow: -1px -128px 65px -124px rgba(0, 0, 0, 0.2) inset;
+  cursor: pointer;
 }
