--- a/src/components/Store/Store.module.css
+++ b/src/components/Store/Store.module.css
@@ -1,3 +1,10 @@
 .store {
   flex-grow: 1;
+  display: flex;
+}
+.products {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  flex-grow: 1;
+  padding: 30px;
 }
