--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -15,9 +15,16 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  filter: brightness(0) saturate(100%) invert(22%) sepia(71%) saturate(2790%)
+    hue-rotate(131deg) brightness(90%) contrast(101%);
 }
 
 .title {
   font-size: 24px;
+  font-weight: bold;
+}
+
+.slogan {
+  color: gray;
   font-weight: bold;
 }
