--- a/src/components/StoreSidebar/StoreSidebar.module.css
+++ b/src/components/StoreSidebar/StoreSidebar.module.css
@@ -1,9 +1,37 @@
 .sidebar {
   width: 200px;
   box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.16);
-  padding: 12px;
+  padding: 12px 0px;
   font-size: 17px;
 }
+
+.sidebarLabel {
+  position: absolute;
+  transform: translate(8px, -29px);
+  background-color: rgba(238, 238, 238, 1);
+  flex-grow: 0;
+  width: 130px;
+  padding: 5px;
+  font-size: 14px;
+  text-align: center;
+  border-radius: 8px;
+  box-shadow:
+    rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+
 .category {
   color: green;
+  padding: 0px 12px;
+}
+
+.category.active {
+  color: white;
+  background-color: green;
+}
+
+.category:hover {
+  cursor: pointer;
+  text-decoration: underline;
 }
