--- a/src/components/CartItem/CartItems.module.css
+++ b/src/components/CartItem/CartItems.module.css
@@ -1,13 +1,14 @@
 .item {
   display: flex;
-  gap: 10px;
-  padding: 0px 12px;
-  max-width: 400px;
+  gap: 15px;
+  padding: 18px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
+  border-radius: 8px;
 }
 
 .imgContainer {
   height: auto;
-  max-width: 100px;
+  max-width: 150px;
 }
 
 .thumbnail {
@@ -28,4 +29,18 @@
 
 .remove {
   max-width: 100px;
+  border: 1px solid rgba(0, 0, 0, 0);
+  border-radius: 8px;
+  color: white;
+  padding: 2px 0px;
+  font-weight: bold;
+  font-size: 13px;
+  background-color: red;
+  width: 300px;
+  cursor: pointer;
+  transition: all 200ms ease;
+}
+
+.remove:hover {
+  background-color: darkred;
 }
