--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,6 +1,18 @@
 footer {
-  height: 100px;
-  background-color: gray;
+  display: flex;
+  background-color: #ebedef;
   flex-grow: 0;
   flex-shrink: 0;
+  justify-content: center;
+}
+
+.list {
+  display: flex;
+  padding: 20px;
+  gap: 15px;
+}
+
+.list > a {
+  color: gray;
+  text-decoration: underline;
 }
