--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -1,3 +1,14 @@
+@keyframes appear {
+  0% {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
 .productCard {
   max-width: 200px;
   display: flex;
@@ -5,11 +16,13 @@
   gap: 8px;
   box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
   border-radius: 8px;
+  animation: appear 500ms ease-out;
 }
 
 .prodImg {
   max-width: 100%;
-  height: auto;
+  height: 200px;
+  background-color: #eff1f3;
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
 }
@@ -36,4 +49,9 @@
   border-radius: 8px;
   font-size: 14px;
   padding: 3px 8px;
+  transition: all 200ms ease;
+}
+
+.add:hover {
+  background-color: darkgreen;
 }
